hphp/hack/test/typecheck/splat/type_splat_missing_bound_bad.php.constraint_method_call.exp
ERROR: File "type_splat_missing_bound_bad.php", line 5, characters 20-20:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_missing_bound_bad.php", line 5, characters 22-23:
  Expected `(mixed...)`
  File "type_splat_missing_bound_bad.php", line 5, characters 20-20:
  But got `T`
ERROR: File "type_splat_missing_bound_bad.php", line 5, characters 20-20:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_missing_bound_bad.php", line 5, characters 22-23:
  Expected `(mixed...)`
  File "type_splat_missing_bound_bad.php", line 5, characters 20-20:
  But got `mixed`
  File "type_splat_missing_bound_bad.php", line 5, characters 20-20:
    by the definition of `T` arising from an implicit `as mixed` constraint on this type
ERROR: File "type_splat_missing_bound_bad.php", line 6, characters 32-32:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_missing_bound_bad.php", line 6, characters 19-39:
  Expected `(mixed...)`
  File "type_splat_missing_bound_bad.php", line 6, characters 32-32:
  But got `T`
ERROR: File "type_splat_missing_bound_bad.php", line 6, characters 32-32:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_missing_bound_bad.php", line 6, characters 19-39:
  Expected `(mixed...)`
  File "type_splat_missing_bound_bad.php", line 6, characters 32-32:
  But got `mixed`
  File "type_splat_missing_bound_bad.php", line 6, characters 32-32:
    by the definition of `T` arising from an implicit `as mixed` constraint on this type
ERROR: File "type_splat_missing_bound_bad.php", line 7, characters 14-14:
This generic parameter is redundant because it only appears in a covariant (output) position. Consider replacing uses of generic parameter with `nothing` or specifying `<<__Explicit>>` on the generic parameter (Typing[4366])
ERROR: File "type_splat_missing_bound_bad.php", line 7, characters 30-30:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_missing_bound_bad.php", line 7, characters 17-37:
  Expected `(mixed...)`
  File "type_splat_missing_bound_bad.php", line 7, characters 30-30:
  But got `T`
ERROR: File "type_splat_missing_bound_bad.php", line 7, characters 30-30:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_missing_bound_bad.php", line 7, characters 17-37:
  Expected `(mixed...)`
  File "type_splat_missing_bound_bad.php", line 7, characters 30-30:
  But got `mixed`
  File "type_splat_missing_bound_bad.php", line 7, characters 30-30:
    by the definition of `T` arising from an implicit `as mixed` constraint on this type
